--- a/index.css
+++ b/index.css
@@ -20,8 +20,12 @@ font-weight: 100;
 font-size: 15px;
 }
 .main{
-display:flex;
-margin:200px;
+
+align-items: center;
+  display: flex;         
+  gap: 20px;             
+  justify-content: center; 
+
 }
 .rate{
     display:flex;
@@ -34,13 +38,13 @@ margin:200px;
 }
 .box-1,.box-2,.box-3{
 background-color:  hsl(300, 24%, 96%);
-width:350px;
-padding:10px;
+
 border-radius: 8px;
 display: flex;
 gap:24px;
 align-items: center;
-
+width: 200px;           /* Width of each box */
+  padding: 15px;          
 
 
 
@@ -49,8 +53,22 @@ align-items: center;
 .box-2{margin-right: 100px;}
 .box-3{margin-right: 10px;}
 .custemer{
-    display:flex;
-    align-items: end;
-    width:200px;
-    padding:90px;
+       align-items: flex-end;
+  display: flex;
+  
+  justify-content: center;
+   
+   gap:10px;
+   
+
 }
+
+.c1,.c2,.c3{
+ background-color:hsl(300, 43%, 22%);
+width:200px;
+padding: 50px;
+}
+.main-c{display:flex;
+        justify-content: center;
+         align-items: flex-end;
+    }
