--- a/index.css
+++ b/index.css
@@ -2,15 +2,18 @@
     margin:0;
     padding: 0;
 }
+
+
 body{
 width:auto;
+padding: 0px;
 height: 100vh;
   font-family: 'League Spartan', sans-serif;
  font-size: 11px;
 display: flex;
 gap:24px;
 align-items: center;
-
+overflow-y: auto; 
 }
 .head{
 width:250px;
@@ -22,12 +25,15 @@ font-weight: 100;
 font-size: 15px;
 }
 .main{
-width:400;
-padding: 80px;
+width:90%;
+padding: 20px;
+margin: 0 auto;
 align-items: center;
-  display: flex;         
-  gap: 20px;             
-  justify-content: center; 
+display: flex;         
+gap: 20px;             
+justify-content: center;
+flex-direction: column;
+
 
 }
 .rate{
@@ -46,7 +52,7 @@ border-radius: 8px;
 display: flex;
 gap:24px;
 align-items: center;
-width: 350px;           /* Width of each box */
+width: 350px;           
   padding: 15px;          
 
 
@@ -56,12 +62,12 @@ width: 350px;           /* Width of each box */
 .box-2{margin-right: 100px;}
 .box-3{margin-right: 10px;}
 .custemer{
-       align-items: flex-end;
+       
   display: flex;
-  
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: space-between;
    padding:50px;
-   gap:10px;
+   
    
 
 }
@@ -69,23 +75,22 @@ width: 350px;           /* Width of each box */
   display:flex;
   flex-direction: column;
   gap:5px;
+  align-items: center;
+  justify-content: center;
 
 }
 
 .c1,.c2,.c3{
  background-color:hsl(300, 43%, 22%);
-width:200px;
+width:20%;
 padding: 50px;
 border-radius: 8px;
 display:flex;
-justify-content: space-between;
 flex-direction: column;
+align-items: end;
 gap:15px;
 }
-.main-c{display:flex;
-        justify-content: center;
-         align-items: flex-end;
-    }
-.c1{ margin-right:100px;}
-.c2{ margin-right: 80px;}
-.c3{ margin-right: 60px;}
+
+.c1{ transform: translateY(0px);}
+.c2{ transform: translateY(20px);}
+.c3{ transform: translateY(40px);}
