--- a/index.css
+++ b/index.css
@@ -5,69 +5,87 @@
 
 
 body{
-width:auto;
-padding: 0px;
+width:100%;
+padding:50px;
 height: 100vh;
-  font-family: 'League Spartan', sans-serif;
- font-size: 11px;
+font-family: 'League Spartan', sans-serif;
+font-size: 11px;
 display: flex;
 gap:24px;
 align-items: center;
+justify-content: center;
 overflow-y: auto; 
 }
 .head{
 width:250px;
-padding:20px;
+max-width: 400px;
+padding:10px;
 display:flex;
 gap:15px;
 flex-direction: column;
+justify-content: space-between;
 font-weight: 100;
 font-size: 15px;
 }
+.h-1{
+  color:hsl(300, 43%, 22%) ;
+  font-size: 35px;
+  font-weight: 900;
+}
+.all{
+  display:flex;
+  justify-content: space-between;  
+  width:1000px ;
+  
+  
+}
 .main{
-width:90%;
-padding: 20px;
-margin: 0 auto;
+width:60%;
+padding: 10px;
 align-items: center;
 display: flex;         
-gap: 20px;             
-justify-content: center;
+gap: 80px;             
+justify-content: space-between;
 flex-direction: column;
-
+ 
 
 }
 .rate{
     display:flex;
-    gap:10px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap:10px;
     font-size: 15px;
     color: hsl(300, 43%, 22%);
+    width:500px;
+    
+    
 }
 .box-1,.box-2,.box-3{
 background-color:  hsl(300, 24%, 96%);
-
+gap:10px;
 border-radius: 8px;
 display: flex;
-gap:24px;
 align-items: center;
 width: 350px;           
-  padding: 15px;          
-
-
-
+padding:15px ; 
+  
+      
 }
-.box-1{margin-right:200px ;}
-.box-2{margin-right: 100px;}
-.box-3{margin-right: 10px;}
+.box-1{ align-self: flex-start;
+}
+.box-2{align-self: center;}
+
+.box-3{ align-self: flex-end;
+ }
+
 .custemer{
-       
+     gap:24px;  
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-   padding:50px;
-   
+   padding:10px;
+   height:250px;
    
 
 }
@@ -75,22 +93,41 @@ width: 350px;
   display:flex;
   flex-direction: column;
   gap:5px;
-  align-items: center;
+  align-items:center ;
   justify-content: center;
 
+}
+.p-all{
+  color:hsl(0, 0%, 100%);
+  font-size: 15px;
+  width:300px;
+  height: 75px;
+  line-height: 1.4;
+  padding: 10px;
+}
+.person{
+  display: flex;
+  width: 200px;
+  
+}
+.img{
+  border-radius: 100px;
+  width:40px;
+  padding:15px;
+  
 }
 
 .c1,.c2,.c3{
  background-color:hsl(300, 43%, 22%);
-width:20%;
-padding: 50px;
+padding: 20px;
 border-radius: 8px;
 display:flex;
 flex-direction: column;
-align-items: end;
-gap:15px;
+justify-content: space-between;
+
+
 }
 
-.c1{ transform: translateY(0px);}
-.c2{ transform: translateY(20px);}
-.c3{ transform: translateY(40px);}
+.c1{align-self: flex-start;}
+.c2{align-self: center;}
+.c3{align-self: flex-end;}
