--- a/index.css
+++ b/index.css
@@ -17,9 +17,9 @@ justify-content: center;
 overflow-y: auto; 
 }
 .head{
-width:250px;
-max-width: 400px;
-padding:10px;
+width:275px;
+max-width: 435px;
+padding:px;
 display:flex;
 gap:15px;
 flex-direction: column;
@@ -35,7 +35,7 @@ font-size: 15px;
 .all{
   display:flex;
   justify-content: space-between;  
-  width:1000px ;
+  width:1010px ;
   
   
 }
@@ -84,7 +84,7 @@ padding:15px ;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-   padding:10px;
+  
    height:260px;
    
 
@@ -100,7 +100,7 @@ padding:15px ;
 .p-all{
   color:hsl(0, 0%, 100%);
   font-size: 15px;
-  width:265px;
+  width:260px;
   height: 90px;
   line-height: 1.4;
   padding: 20px;
@@ -123,7 +123,7 @@ padding:15px ;
 
 .c1,.c2,.c3{
  background-color:hsl(300, 43%, 22%);
-padding: 20px;
+padding: 25px;
 border-radius: 8px;
 display:flex;
 flex-direction: column;
