--- a/index.css
+++ b/index.css
@@ -35,13 +35,13 @@ font-size: 15px;
 .all{
   display:flex;
   justify-content: space-between;  
-  width:1010px ;
+  width:100% ;
   
   
 }
 .main{
-width:60%;
-padding: 10px;
+width:65%;
+padding: px;
 align-items: center;
 display: flex;         
 gap: 80px;             
@@ -84,7 +84,7 @@ padding:15px ;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  
+  width: 100%;
    height:260px;
    
 
@@ -100,7 +100,7 @@ padding:15px ;
 .p-all{
   color:hsl(0, 0%, 100%);
   font-size: 15px;
-  width:260px;
+  width:px;
   height: 90px;
   line-height: 1.4;
   padding: 20px;
